[workspace]
resolver = "2"
members = [
    "crates/kernelflow-core",
    "crates/kernelflow-scheduler",
    "crates/kernelflow-sandbox",
    "crates/kernelflow-storage",
    "crates/kernelflow-p2p",
    "crates/kernelflow-attest",
    "crates/kernelflow-api",
    "crates/kernelflow-ai",
    "crates/kernelflow-node",
    "crates/kernelflow-nodes",
    "crates/kernelflow-matchmaker",
]
exclude = ["anchor"]

[workspace.package]
version       = "0.1.0"
edition       = "2021"
rust-version  = "1.85"
license       = "Apache-2.0"
repository    = "https://github.com/abhijeet/KernelFlow"
authors       = ["Abhijeet <you@example.com>"]

[workspace.dependencies]
# --- async / runtime ---
tokio          = { version = "1.40", features = ["full"] }
tokio-util     = { version = "0.7", features = ["full"] }
tokio-stream   = "0.1"
futures        = "0.3"
async-trait    = "0.1"
pin-project    = "1"

# --- serde / data ---
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
bincode        = "1.3"
bytes          = "1"
uuid           = { version = "1", features = ["v4", "serde"] }
chrono         = { version = "0.4", features = ["serde"] }

# --- error handling ---
thiserror      = "1"
anyhow         = "1"

# --- observability ---
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json"] }
tracing-futures     = "0.2"
metrics             = "0.23"
metrics-exporter-prometheus = "0.15"

# --- config ---
config         = "0.14"
dotenvy        = "0.15"
clap           = { version = "4", features = ["derive", "env"] }

# --- vm / sandbox ---
wasmtime       = "23"
wasmtime-wasi  = "23"

# --- storage ---
rocksdb        = { version = "0.22", default-features = false, features = ["lz4"] }

# --- p2p ---
libp2p         = { version = "0.54", features = ["tokio","gossipsub","mdns","noise","yamux","tcp","macros","kad","identify","ping"] }

# --- crypto ---
ed25519-dalek  = { version = "2", features = ["rand_core"] }
sha2           = "0.10"
rand           = "0.8"
hex            = "0.4"

# --- graphql ---
async-graphql        = { version = "7", features = ["chrono", "uuid"] }
async-graphql-axum   = "7"
axum                 = "0.8"
tower                = { version = "0.5", features = ["full"] }
tower-http           = { version = "0.6", features = ["trace", "cors", "limit", "timeout"] }

# --- resilience ---
governor       = "0.6"
failsafe       = "1"
backoff        = { version = "0.4", features = ["tokio"] }

# --- ai ---
reqwest        = { version = "0.12", features = ["json", "rustls-tls"] }

# --- test / bench ---
criterion      = { version = "0.5", features = ["async_tokio"] }
proptest       = "1"
mockall        = "0.13"
tempfile       = "3"

[profile.release]
lto           = "thin"
codegen-units = 1
opt-level     = 3
strip         = true
panic         = "abort"

[profile.bench]
debug = true

