[package]
name        = "kernelflow-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GenAI / agentic helpers: LLM-driven workflow synthesis & anomaly summaries."

[dependencies]
kernelflow-core = { path = "../kernelflow-core" }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
async-trait = { workspace = true }
tokio       = { workspace = true }

