[package]
name        = "kernelflow-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GraphQL API (axum + async-graphql) with subscriptions."

[dependencies]
kernelflow-core      = { path = "../kernelflow-core" }
kernelflow-scheduler = { path = "../kernelflow-scheduler" }
kernelflow-storage   = { path = "../kernelflow-storage" }
async-graphql        = { workspace = true }
async-graphql-axum   = { workspace = true }
axum                 = { workspace = true }
tower                = { workspace = true }
tower-http           = { workspace = true }
tokio                = { workspace = true }
tokio-stream         = { workspace = true }
futures              = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
thiserror            = { workspace = true }
tracing              = { workspace = true }
uuid                 = { workspace = true }
chrono               = { workspace = true }
async-trait          = { workspace = true }
async-stream         = "0.3"

