[package]
name        = "kernelflow-matchmaker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Operator network + reputation-weighted matchmaker (Fermah Froben pattern)."

[dependencies]
kernelflow-core = { path = "../kernelflow-core" }
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tokio       = { workspace = true }
uuid        = { workspace = true }
rand        = { workspace = true }
chrono      = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

