[package]
name        = "kernelflow-nodes"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Verified node library: HTTP, median, threshold, hash, sign, constant. Composable primitives for workflows."

[dependencies]
kernelflow-core    = { path = "../kernelflow-core" }
kernelflow-attest  = { path = "../kernelflow-attest" }
async-trait        = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tokio              = { workspace = true }
reqwest            = { workspace = true }
sha2               = { workspace = true }
hex                = { workspace = true }
uuid               = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

