[package]
name        = "kernelflow-p2p"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "libp2p gossipsub layer for workflow result propagation."

[dependencies]
kernelflow-core = { path = "../kernelflow-core" }
libp2p      = { workspace = true }
tokio       = { workspace = true }
futures     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
async-trait = { workspace = true }

