[package]
name        = "kernelflow-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RocksDB-backed event log + state store with column-family sharding."

[dependencies]
kernelflow-core = { path = "../kernelflow-core" }
rocksdb     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
bincode     = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
async-trait = { workspace = true }
tokio       = { workspace = true }
uuid        = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true }

